# node-librespot

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: prebuild.yml
scripts/: postinstall.js  prebuild.js  prepare-prebuilds.js  test-connect.js  test-service.js  test.js  update-librespot.sh
src/: index.ts  lib.rs  types.ts
