[package]
name = "librespot-addon"
version = "0.1.0"
edition = "2021"
description = "Rust-based librespot binding for Node via N-API."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
bytes = "1"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
# Pinned to a specific upstream commit (v0.8.0 + 14 dev commits) so source
# builds are reproducible without a local ./librespot-dev checkout. See issue #4.
librespot-core = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2", default-features = false, features = [
    "rustls-tls-native-roots",
] }
librespot-audio = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2", default-features = false, features = [
    "rustls-tls-native-roots",
] }
librespot-playback = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2", default-features = false }
librespot-discovery = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2", default-features = false, features = [
    "with-libmdns",
] }
librespot-connect = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2", default-features = false }
librespot-metadata = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2", default-features = false }
serde_json = "1"
tokio-stream = "0.1"
log = { version = "0.4", features = ["std"] }
